# attache-platform

./: .dev.vars.example  .gitignore  README.md  dev-server.ts  docker-compose.yml  package-lock.json  package.json  pyproject.toml  trellis.config.ts  worker.js  wrangler.jsonc
.github/workflows/: deploy-docs.yml
.scratch/: cc-brief-major-rewrite-of-the-attach-se-1773907602.md  cc-brief-rebrand-and-enrich-the-evie-pl-1775269357.md  cc-brief-review-the-security-documentat-1773905686.md  cc-brief-write-a-security-documentation-1773897853.md
ansible/group_vars/: all.yml
ansible/inventory/: hosts.example.yml
ansible/playbooks/: bootstrap.yml
docs/: docusaurus.config.ts  package.json  pnpm-lock.yaml
docs/.scratch/: bloom-filter-spec.md  cc-review.md  codex-review.md  research-summary.md
docs/docs/: intro.md
docs/docs/architecture/: agent-orchestration.md  index.md  macos-vs-linux.md
docs/docs/config-repo/: index.md
docs/docs/entity-types/: book.md  digital-document.md  event.md  how-to.md  index.md  message.md  organization.md  person.md  podcast.md  project.md  report.md  research.md  source-code.md  video.md  web-page.md
docs/docs/integrations/: fellow.md  float.md  github.md  google.md  linear.md  slack.md
docs/docs/memory/: activity-layer.md  conventions.md  decay.md  document-types.md  episodic-layer.md  identity-layer.md  index.md  knowledge-layer.md  markdown-format.md  memory-layer.md  research.md  search-model.md  search.md  (+1 more)
docs/static/: _redirects  llm.txt  llms.txt
migrations/: 00-extensions.sql
src/attache/: __init__.py  cli.py
(+47 files in other folders)
