[project]
name = "attache-platform"
version = "0.1.0"
description = "Turnkey AI agent platform powered by OpenClaw"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "ansible-core>=2.17",
    "ansible>=10.0",
]

[project.scripts]
attache = "attache.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attache"]
